# space_robot

./: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
config/: pid_control.yaml
include/chaser_controller/: chaser_controller.h
include/cog_pose_publisher/: cog_pose_publisher.h
include/joint_multi_controller/: joint_multi_controller.h
launch/: display_chaser.launch  ros_control.launch  spawn_chaser.launch  upload_model.xml
rviz/: urdf.rviz
scripts/: getit_sim_demo.py  getit_sim_demo2.py  getit_sim_demo3.py
src/: chaser_controller.cpp  cog_pose_publisher.cpp  joint_multi_controller.cpp
urdf/chaser/: chaser.urdf.xacro  common.xacro  properties.urdf.xacro
urdf/chaser/arm/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro
urdf/chaser/base/: base.gazebo.xacro  base.urdf.xacro
urdf/chaser/base_sub/: base_sub.gazebo.xacro  base_sub.transmission.xacro  base_sub.urdf.xacro
urdf/chaser/sensors/: ft_sensor.gazebo.xacro  ft_sensor.urdf.xacro
worlds/: empty_nogravity.world
worlds/earth/: earth.dae
worlds/space/: stars_milky_way.material
