<?xml version="1.0"?>
<package>
  <name>getit_robot_gazebo</name>
  <version>0.0.0</version>
  <description>The getit_robot_gazebo package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>getit_robot_gazebo_plugins</build_depend>
  <build_depend>controller_interface</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>getit_robot_gazebo_plugins</run_depend>
  <run_depend>controller_interface</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
